ros2_ws/log/build_2024-08-12_12-31-01/serial_communicator/stderr.log
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:78: warning: unused parameter 'length' [-Wunused-parameter]
            [this, data](const boost::system::error_code& error, std::size_t length) {
                                                                             ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:38:14: warning: lambda capture 'this' is not used [-Wunused-lambda-capture]
            [this, data](const boost::system::error_code& error, std::size_t length) {
             ^~~~~
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:63:17: error: expression is not assignable
        while (1=1){
               ~^
2 warnings and 1 error generated.
make[2]: *** [CMakeFiles/simple_serial.dir/build.make:76: CMakeFiles/simple_serial.dir/src/simple_serial.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/simple_serial.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
